Fixed gap problem

--- a/web-ui/src/main/webapp/app/css/custom.css
+++ b/web-ui/src/main/webapp/app/css/custom.css
@@ -1223,7 +1223,7 @@ body ul {
 	padding-right: 0px;
 	width: auto;
 	left: 0px;
-	right: 724px;
+	right: 716px;
 	max-width: 1430px;
 	min-width: 830px;
 	border-right: 1px solid #c5d0dc;
